Updated specification Added schema validation Added schema example Made ServiceGroup and CLI work Added CLI options